Change citation style from plain author to include year too

--- a/doc/inc/50/52_shading.tex
+++ b/doc/inc/50/52_shading.tex
@@ -88,7 +88,7 @@ Diese Annahme ist unter den folgenden Voraussetzungen gültig:
 
 Ist eine der ersten beiden Annahmen falsch, so muss für den Vektor der
 Lichtquelle $\bm{l}$ bzw.\ den Vektor des Betrachters $\bm{v}$ ein
-konstanter Wert berechnet werden.~\citeauthor{foley_computer_1996} gibt
+konstanter Wert berechnet werden.~\citet{foley_computer_1996} gibt
 hier als Beispiele das Zentrum des Polygones oder den ersten Eckpunkt
 des Polygones an.
 
