--- a/doc/mte7101.tex
+++ b/doc/mte7101.tex
@@ -35,8 +35,12 @@
 \usepackage[font={footnotesize,it}]{caption}                            % for captions of figures and tables
 \usepackage{booktabs}                                                   % package for nicer tables
 \usepackage{tocvsec2}                                                   % provides means of controlling the sectional numbering
-\usepackage{natbib}                                                     % provides various citation styles
-\usepackage{wrapfig}                                                    % provides floating of text around images
+\usepackage[
+    style=alphabetic,
+    natbib=true,
+    backend=bibtex,
+    citestyle=authoryear
+]{biblatex}                                                             % Citations
 \usepackage{nameref}                                                    % provides printing names of references
 \usepackage{colortbl}                                                   % Colored tables
 \usepackage{scrhack}                                                    % Remove float errors and warnings
@@ -45,7 +49,14 @@
 \usepackage{esvect}                                                     % Provides nicer vector display in math mode
 \usepackage[owncaptions]{vhistory}                                      % Provides framework for creating history outline
 \renewcommand{\vhhistoryname}{Versionen}
+%---------------------------------------------------------------------------
 
+% Bibliography
+%---------------------------------------------------------------------------
+\addbibresource{inc/static/bibliography}
+\DefineBibliographyStrings{ngerman}{
+    andothers = {{et\,al\adddot}},
+}
 %---------------------------------------------------------------------------
 
 % Load Math Packages
@@ -306,8 +317,9 @@
 %\cleardoublepage
 \phantomsection{}
 \addcontentsline{toc}{chapter}{Literaturverzeichnis}
-\bibliographystyle{alpha}
-\bibliography{inc/static/bibliography}{}
+% \bibliographystyle{alpha}
+% \bibliography{inc/static/bibliography}{}
+\printbibliography{}
 %---------------------------------------------------------------------------
 
 % Listings
