Add comparision between shading models, expand section about Phong shading

--- a/doc/inc/50/52_shading.tex
+++ b/doc/inc/50/52_shading.tex
@@ -10,7 +10,7 @@
 % * Example image of mesh (vertices)
 
 Sofern nicht anders vermerkt, basieren die nachfolgenden Abschnitte
-auf~\cite{foley_computer_1996}[S. 734–739].
+auf~\cite{foley_computer_1996}[S. 734–739] sowie~\cite{hughes_computer_2013}.
 
 Bei der Anwendung von Modellen zur Schattierung (shading models) geht es
 grundsätzlich darum die emitierte Lichtintensität bzw.\ die Farbe einer
@@ -51,7 +51,7 @@ approximation of the limit surface. There are also vertex shaders that serve
 only to transform the vertex locations, and generally have nothing to do with
 eventual color.
 
-\subsection{Flat shading --- per vertex lighting}
+\subsection{Flat-Shading --- per vertex lighting}
 \label{subsec:flat_shading}
 
 % * Calculate normal for each vertice by averaging line-segment normals, e.g.
@@ -80,7 +80,7 @@ Diese Annahme ist unter den folgenden Voraussetzungen gültig:
 \begin{figure}[H]
     \centering
     \includegraphics{img/flat_shading.pdf}
-    \caption{Illustration des Flat shadings\protect\footnotemark}\label{
+    \caption{Illustration des Flat-Shadings\protect\footnotemark}\label{
         fig:flat_shading_illustration}
 \end{figure}
 \footnotetext{Eigene Darstellung mittels Inkscape, angelehnt
@@ -92,39 +92,88 @@ konstanter Wert berechnet werden.~\citet{foley_computer_1996} gibt
 hier als Beispiele das Zentrum des Polygones oder den ersten Eckpunkt
 des Polygones an.
 
-\subsection{Gouraud shading --- face interpolated lighting}
+\subsection{Gouraud-Shading --- face interpolated lighting}
 \label{subsec:gouraud_shading}
 
 Bei Gouraud-Shading handelt es sich um ein Shading-Verfahren, welches die
-Farbintensitätswerte der Eckpunkte von Oberflächen eines Meshes interpoloiert.
+Farbintensitätswerte der Eckpunkte von Oberflächen eines Meshes interpoliert.
+
+\begin{figure}[H]
+    \centering
+    \includegraphics{img/gouraud_shading.pdf}
+    \caption{Illustration des Gouraud-Shadings\protect\footnotemark.}\label{
+        fig:gouraud_shading_illustration}
+\end{figure}
+\footnotetext{Eigene Darstellung mittels Inkscape, angelehnt
+    an~\cite{hughes_computer_2013}}
 
 Um den Farbintensitätswert eines Eckpunktes von Oberflächen  zu berechnen,
 schlägt Gouraud die Berechnung des Durchschnittswertes der Oberflächennormalen
 zweier adjazenter Liniensegmente (im 2D-Raum) bzw.\  aller adjazenter Dreiecke
 (im 3D-Raum) vor.
 
-\todo[inline]{Image explaining average calculation}
+\begin{figure}[H]
+    \centering
+    \includegraphics{img/shading_mesh_normals.pdf}
+    \caption{Illustration der berechneten Normalenvektoren $\bm{n}_{v_{2}}$ und
+    $\bm{n}_{v_{3}}$ an den Eckpunkten $v_{2}$ und $v_{3}$ sowie des
+    Normalenvektors $\bm{n}_{v_{23}}$ der Kante $\bm{v_{2}v_{3}}$
+    \protect\footnotemark.}\label{fig:gouraud_shading_normals_illustration}
+\end{figure}
+\footnotetext{Eigene Darstellung mittels Inkscape, angelehnt
+    an~\cite{hughes_computer_2013}}
 
 Die Berechnung des Normalenvektors eines Eckpunktes via Durchschnittswert ist
 üblicherweise eine genügend gute Näherung der Oberflächennormale der
 eigentlichen Oberfläche. Die Präzision hängt dabei aber klar von der
-Granularität des Modelles (mesh) ab.
+Granularität des Modelles (Mesh) ab.
 
-\subsection{Phong shading --- normal interpolated lighting}
+\subsection{Phong-Shading --- normal interpolated lighting}
 \label{subsec:phong_shading}
 
-\todo[inline]{Translate/cite}
+Phong-Shading ist eine Verbesserung des Gouraud-Verfahrens und bietet eine
+bessere Annäherung an die Schattierung bzw. Darstellung von glatten
+Oberflächen. Das Verfahren eignet sich vor allem dann besser, wenn ein
+Beleuchtungsmodell verwendet wird, welches kleine spekuläre Refelektionen
+bietet, wie z.B. das Phong-Beleuchtungsmodell.
 
-Phong shading improves upon Gouraud shading and provides a better approximation
-of the shading of a smooth surface. Phong shading assumes a smoothly varying
-surface normal vector. The Phong interpolation method works better than Gouraud
-shading when applied to a reflection model that has small specular highlights
-such as the Phong reflection model.
+Bei Phong-Shading wird ein Normalenvektor linear an einer Oberfläche (eines
+Polygons) interpoliert, ausgehend von den Normalenvektoren der Kanten der
+Oberfläche (im obigen Beispiel wäre dies $\bm{n}_{v_{2}v_{3}}$). Die
+Oberflächennormale wird an jedem Pixel interpoliert und normalisiert und kommt
+dann für die Berechnung des Farbintnsitätswertes anhand eines
+Beleuchtungsmodelles, wie zum Beispiel das Phong-Beleuchtungsmodell, zum
+Einsatz. Daher ist Phong-Shading viel rechenaufwändiger als Gouraud-Shading, da
+das Beleuchtungsmodell für jeden Pixel anstatt für jede Kante berechnet werden
+muss.
 
-Unlike Gouraud shading, which interpolates colors across polygons, in Phong
-shading a normal vector is linearly interpolated across the surface of the
-polygon from the polygon's vertex normals. The surface normal is interpolated
-and normalized at each pixel and then used in a reflection model, e.g.\ the
-Phong reflection model, to obtain the final pixel color. Phong shading is more
-computationally expensive than Gouraud shading since the reflection model must
-be computed at each pixel instead of at each vertex.
+\begin{figure}[H]
+    \centering
+    \includegraphics{img/phong_shading_mesh_normals.pdf}
+    \caption{Stark vereinfachte Illustration der interpolierten
+        Normalenvektoren anhand der Kante $\bm{v_{2}v_{3}}$
+    \protect\footnotemark.}\label{fig:phong_shading_normals_illustration}
+\end{figure}
+\footnotetext{Eigene Darstellung mittels Inkscape, angelehnt
+    an~\cite{hughes_computer_2013}}
+
+
+\begin{table}[H]
+    \centering
+    \caption{Vergleich der genannten Shading-Verfahren anhand einer
+    Beispielszene\protect\footnotemark.}\label{table:shading_comparision}
+    \begin{tabular}{p{0.2\textwidth}p{0.2\textwidth}p{0.2\textwidth}p{0.2\textwidth}}
+        \toprule
+            \textbf{Flat-Shading} &
+            \textbf{Gouraud-Shading} &
+            \textbf{Gouraud-Shading mit Phong-Beleuchtungsmodell} &
+            \textbf{Phong-Shading mit Phong-Beleuchtungsmodell} \\
+            \cmidrule(r){1-1}\cmidrule(lr){2-2}\cmidrule(lr){3-3}\cmidrule(l){4-4}
+            \includegraphics[width=0.2\textwidth]{img/flat_shading_example.png} \newline &
+            \includegraphics[width=0.2\textwidth]{img/gouraud_shading_example.png} \newline &
+            \includegraphics[width=0.2\textwidth]{img/phong_gouraud_shading_example.png} \newline &
+            \includegraphics[width=0.2\textwidth]{img/phong_phong_shading_example.png} \newline \\
+        \bottomrule
+    \end{tabular}
+\end{table}
+\footnotetext{\cite{danchilla_beginning_webgl}}
