Fix line length

--- a/doc/inc/60/62_description_implicit_surfaces.tex
+++ b/doc/inc/60/62_description_implicit_surfaces.tex
@@ -376,9 +376,10 @@ macht.
 \subsubsection{``Verdrehung'' (Twist)}
 \label{ssubsec:implicit_surfaces_ops_twist}
 
-Gemäss~\cite{hart_sphere_1994}[S. 543] werden bei der ``Verdrehung'' einer
-impliziten Oberfläche zwei Achsen (z.B. $x$ und $y$) anhand einer linearen Funktion $a(\cdot)$ in
-Abhängigkeit der dritten Achse (z.B. $z$) rotiert:
+Gemäss~\cite{hart_sphere_1994}[S. 543] werden bei der ``Verdrehung'' (Twist)
+einer impliziten Oberfläche zwei Achsen (z.B. $x$ und $y$) anhand einer
+linearen Funktion $a(\cdot)$ in Abhängigkeit der dritten Achse (z.B. $z$)
+rotiert:
 
 \begin{gather}
     twist(\bm{x}) = \begin{pmatrix} 
