Define colors for GLSL listings explicitely

--- a/doc/glslListings.sty
+++ b/doc/glslListings.sty
@@ -134,16 +134,12 @@
 	showstringspaces=false,
 	identifierstyle=\ttfamily,
 	keywordstyle=\color{syntaxRed},
-	%keywordstyle=[1]\bfseries\color{syntaxBlue},
-	%keywordstyle=[2]\bfseries\color{syntaxRed},
+	keywordstyle=[1]\bfseries\color{syntaxBlue},
+	keywordstyle=[2]\bfseries\color{syntaxRed},
 	keywordstyle=[3]\color{syntaxBlue},
-	%keywordstyle=[4]\bfseries\color{syntaxBlue},
+	keywordstyle=[4]\bfseries\color{syntaxBlue},
 	commentstyle=\color{syntaxComment},
-	% keywordstyle=[1]\color[rgb]{0,0,0.75},
-	% keywordstyle=[2]\color[rgb]{0.5,0.0,0.0},
-	% keywordstyle=[3]\color[rgb]{0.127,0.427,0.514},
-	% keywordstyle=[4]\color[rgb]{0.4,0.4,0.4},
-	% stringstyle=\color[rgb]{0.639,0.082,0.082},
+	stringstyle=\color[rgb]{0.639,0.082,0.082},
 }
 
 % use to open an external shader and display with GLSL language highlight
