Fix citation of author to work with Biber backend

--- a/doc/inc/60/62_description_implicit_surfaces.tex
+++ b/doc/inc/60/62_description_implicit_surfaces.tex
@@ -402,7 +402,7 @@ vorzeichenabhängigen  Distanzfunktion $f_{A}$ respektive $f_{B}$ definiert:
 
 wobei $\bm{x}$ den abzutastenden Punkt im Raum darstellt.
 
-Wie~\citet*{hart_sphere_1994} schreibt, ist die Distanz zu einer Liste von
+Wie~\citeauthor{hart_sphere_1994} schreibt, ist die Distanz zu einer Liste von
 impliziten Oberflächen die kleinste Distanz der jeweiligen Distanzfunktion.
 Somit erlaubt es die Vereinigung --- neben der eigentlichen Vereinigung von
 Objekten --- mehrere implizite Oberflächen zu kombinieren, ohne dass diese
