Fix reference to chapter about ray tracing

--- a/doc/inc/60/62_description_implicit_surfaces.tex
+++ b/doc/inc/60/62_description_implicit_surfaces.tex
@@ -15,7 +15,7 @@ in jedem Fall gegeben und kann zu nicht zusammenhängenden Flächen oder einer
 Verminderung des Detailgrades führen.\\
 \\
 Eine andere Methode zur Darstellung von impliziten Oberflächen ist das
-unter~\ref{sec:ray_tracing} vorgestellte Ray Tracing Verfahren.
+unter~\ref{subsec:ray_tracing} vorgestellte Ray Tracing Verfahren.
 
 Ein (Licht-) Strahl wird dabei parametrisch als
 
