Esacpe character in bibliography which caused errors in Biber

--- a/doc/inc/static/bibliography.bib
+++ b/doc/inc/static/bibliography.bib
@@ -171,7 +171,7 @@
 	title = {Some Techniques for Shading Machine Renderings of Solids},
 	url = {http://doi.acm.org/10.1145/1468075.1468082},
 	doi = {10.1145/1468075.1468082},
-	series = {{AFIPS} '68 (Spring)},
+	series = {{AFIPS} {'68} (Spring)},
 	pages = {37--45},
 	booktitle = {Proceedings of the April 30–May 2, 1968, Spring Joint Computer Conference},
 	publisher = {{ACM}},
