--- a/doc/inc/static/title.tex
+++ b/doc/inc/static/title.tex
@@ -9,63 +9,47 @@
     % Actually not a realy satisfactory solution but working.
     %---------------------------------------------------------------------------
     \setlength{\unitlength}{1mm}
-    \begin{textblock}{20}[0,0](28,12)
-        \includegraphics[scale=1.0]{img/BFH_Logo_B.png}
-    \end{textblock}
+    \includegraphics[scale=1.0]{img/BFH_Logo_B.png}
 
-    \begin{textblock}{154}(28,48)
-        \begin{picture}(150,2)
-            \put(0,0){\color{bfhgrey}\rule{150mm}{2mm}}
-        \end{picture}
-    \end{textblock}
+    \begin{picture}(150,2)
+        \put(0,0){\color{bfhgrey}\rule{150mm}{2mm}}
+    \end{picture}
 
-    \begin{textblock}{154}[0,-0.2](26,40)
+    \begin{figure}[H]
         \centering
         \includegraphics[scale=0.6]{img/logo.png}
-    \end{textblock}
+    \end{figure}
 
-    \begin{textblock}{154} (28,135)
-        \begin{picture}(150,2)
-            \put(0,0){\color{bfhgrey}\rule{150mm}{2mm}}
-        \end{picture}
-    \end{textblock}
-    \color{black}
+    \begin{picture}(150,2)
+        \put(0,0){\color{bfhgrey}\rule{150mm}{2mm}}
+    \end{picture}
 
     \begin{flushleft}
-        \vspace*{120mm}
         \fontsize{26pt}{28pt}\selectfont
         \titel{}\\
         \vspace{3mm}
+        \textbf{MTE7101} \\
+        \vspace{6mm}
         \fontsize{14pt}{16pt}\selectfont
         \textbf{Projektarbeit 1} \\
-        \vspace{6mm}
-
-        \textbf{MTE7101} \\
         \vspace{3mm}
 
-        \begin{textblock}{150} (28,215)
-            \fontsize{10pt}{17pt}\selectfont
-            \begin{tabbing}
-            xxxxxxxxxxxxxxx   \= xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx \kill
-            Studiengang:      \> Informatik                                         \\
-            Autor:            \> Sven Osterwalder\protect\footnotemark[1]{}         \\
-            Betreuer:         \> Prof.~Claude Fuhrer\protect\footnotemark[2]{} \\
-            Datum:            \> \vhCurrentDate{}\\
-            Version:          \> \vhCurrentVersion\\
-            \end{tabbing}
-        \end{textblock}
+        \fontsize{10pt}{17pt}\selectfont
+        \begin{tabbing}
+        xxxxxxxxxxxxxxx   \= xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx \kill
+        Studiengang:      \> Informatik                                         \\
+        Autor:            \> Sven Osterwalder\protect\footnotemark[1]{}         \\
+        Betreuer:         \> Prof.~Claude Fuhrer\protect\footnotemark[2]{} \\
+        Datum:            \> \vhCurrentDate{}\\
+        Version:          \> \vhCurrentVersion\\
+        \end{tabbing}
     \end{flushleft}
     \footnotetext[1]{sven.osterwalder@students.bfh.ch}
     \footnotetext[2]{claude.fuhrer@bfh.ch}
 
-    \begin{textblock}{150} (28,280)
-        \noindent
-        \color{bfhgrey}\fontsize{9pt}{10pt}\selectfont
-        Berner Fachhochschule | Haute école spécialisée bernoise | Bern University of Applied Sciences
-        \color{black}\selectfont
-    \end{textblock}
-
     \vfill
     \includegraphics[height=\baselineskip]{img/by-sa}\\ \small{\sffamily{Licensed under the Creative Commons Attribution-ShareAlike 3.0 License}}
+
+    \thispagestyle{titlepageStyle}
 
 \end{titlepage}
